Added ActionMode (Incomplete logic there)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="week">Week</string>
     <string name="timetable">TimeTable</string>
     <string name="ulan_nurym_gmail_com">ulan.nurym@gmail.com</string>
+    <string name="delete">Delete</string>
 </resources>
