Added custom dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="ulan_nurymov_gmail_com">ulan.nurymov@gmail.com</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="select_time">Select time</string>
 </resources>
