Added Homeworks activity, Homeworks table in Database and small changes
There is incompleted logic here. Currently I'm working on it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="select_time">Select time</string>
+    <string name="title_activity_homeworks">HomeworksActivity</string>
+    <string name="homeworks">Homeworks</string>
 </resources>
