--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,12 @@
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="select_time">Select time</string>
+
+    <!-- Homeworks Activity strings -->
     <string name="title_activity_homeworks">HomeworksActivity</string>
     <string name="homeworks">Homeworks</string>
+    <string name="select_date">Select date</string>
+    <string name="deadline">Deadline:</string>
+    <string name="description">Description:</string>
+    <string name="subject_homework">Subject:</string>
 </resources>
