--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="week">Week</string>
     <string name="timetable">TimeTable</string>
     <string name="ulan_nurymov_gmail_com">ulan.nurymov@gmail.com</string>
+    <string name="seven_days_of_the_week">7 Days of the Week</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="select_time">Select time</string>
