--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="notes">Notes</string>
     <string name="title">Title</string>
 
+    <!-- Teachers Activity strings -->
+    <string name="teachers">Teachers</string>
+
 </resources>
