--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Main Activity strings -->
     <string name="subject">Subject</string>
     <string name="time">Time</string>
     <string name="room">Room</string>
@@ -30,9 +28,13 @@
 
     <!-- Homeworks Activity strings -->
     <string name="notes">Notes</string>
-    <string name="title">Title</string>
+    <string name="title">Title:</string>
 
     <!-- Teachers Activity strings -->
     <string name="teachers">Teachers</string>
+    <string name="name">Name:</string>
+    <string name="post">Post:</string>
+    <string name="phonenumber">Phone:</string>
+    <string name="email">Email:</string>
 
 </resources>
