--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,54 +14,55 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
-    <string name="select_one_item">Please, select one item.</string>
+    <string name="select_snackbar">Please, select one item.</string>
     <string name="selected">Selected</string>
 
     <!-- Main Activity strings -->
     <string name="timetable">TimeTable</string>
     <string name="ulan_nurymov_gmail_com">ulan.nurymov@gmail.com</string>
     <string name="seven_days_of_the_week">7 Days of the Week</string>
-    <string name="add_subject">Add subject</string>
-    <string name="edit_subject">Edit subject</string>
     <string name="subject">Subject</string>
     <string name="field_error">field can not be empty!</string>
-    <string name="teacher">Teacher</string>
-    <string name="time">Time</string>
     <string name="time_error">Time field can not be empty!</string>
-    <string name="room">Room</string>
     <string name="week">Week</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
-    <string name="save">Save</string>
-    <string name="cancel">Cancel</string>
-    <string name="to_textview">To:</string>
-    <string name="from_textview">From:</string>
-    <string name="teacher_textview">Teacher:</string>
-    <string name="subject_textview">Subject:</string>
-    <string name="room_textview">Room:</string>
-    <string name="select_time">Select time</string>
     <string name="school_website">School website</string>
     <string name="school_website_snackbar">Please, set URL of your school website in settings.</string>
 
+    <string name="add_subject">Add subject</string>
+    <string name="edit_subject">Edit subject</string>
+    <string name="teacher">Teacher</string>
+    <string name="room">Room</string>
+    <string name="time">Time</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="time_to_dialog">To:</string>
+    <string name="time_from_dialog">From:</string>
+    <string name="subject_dialog">Subject:</string>
+    <string name="teacher_dialog">Teacher:</string>
+    <string name="room_dialog">Room:</string>
+    <string name="select_time">Select time</string>
 
     <!-- Homeworks Activity strings -->
     <string name="title_activity_homeworks">HomeworksActivity</string>
     <string name="homeworks">Homeworks</string>
     <string name="select_date">Select date</string>
-    <string name="deadline">Deadline:</string>
-    <string name="description">Description:</string>
-    <string name="subject_homework">Subject:</string>
-
-    <!-- Homeworks Activity strings -->
+    <string name="deadline_dialog">Deadline:</string>
+    <string name="deadline">Deadline</string>
+    <string name="description_dialog">Description:</string>
+    <string name="desctiption">Desctiption</string>
+    <string name="date_error">Date field can not be empty!</string>
+    <!-- Notes Activity strings -->
     <string name="notes">Notes</string>
-    <string name="title">Title:</string>
+    <string name="title_dialog">Title:</string>
 
     <!-- Teachers Activity strings -->
     <string name="teachers">Teachers</string>
-    <string name="name">Name:</string>
-    <string name="post">Post:</string>
-    <string name="phonenumber">Phone:</string>
-    <string name="email">Email:</string>
+    <string name="name_dialog">Name:</string>
+    <string name="post_dialog">Post:</string>
+    <string name="phonenumber_dialog">Phone:</string>
+    <string name="email_dialog">Email:</string>
     <string name="name_list">Name</string>
     <string name="phone_number_list">Phone number</string>
     <string name="post_list">Post</string>
