--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="edit_homework">Edit homework</string>
     <string name="add_homework">Add homework</string>
     <string name="deadline_snackbar">"Deadline field can not be empty!</string>
+    <string name="date">Date</string>
 
     <!-- Notes Activity strings -->
     <string name="notes">Notes</string>
@@ -63,6 +64,7 @@
     <string name="add_note">Add note</string>
     <string name="edit_note">Edit note</string>
     <string name="title_error">Title field can not be empty!</string>
+    <string name="title">Title</string>
 
     <!-- Teachers Activity strings -->
     <string name="teachers">Teachers</string>
@@ -81,4 +83,5 @@
     <string name="sevendays_setting">Enable 7 Days of the Week</string>
     <string name="school_website_setting">Change school website</string>
     <string name="school_website_setting_summary">Change URL of your school website</string>
+
 </resources>
