Optimized activities, fragments, adapters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="edit_note">Edit note</string>
     <string name="title_error">Title field can not be empty!</string>
     <string name="title">Title</string>
+    <string name="saved">Saved</string>
 
     <!-- Teachers Activity strings -->
     <string name="teachers">Teachers</string>
