Added "Select Color" function for listview items, Updated add and edit subject dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="teacher_dialog">Teacher:</string>
     <string name="room_dialog">Room:</string>
     <string name="select_time">Select time</string>
+    <string name="select_color">Select color</string>
 
     <!-- Homeworks Activity strings -->
     <string name="title_activity_homeworks">HomeworksActivity</string>
