--- a/app/src/main/res/res/values/strings.xml
+++ b/app/src/main/res/res/values/strings.xml
@@ -539,7 +539,7 @@
     <string name="sunday">Sonntag</string>
     <string name="selected">Ausgewählt</string>
 
-    <string name="timetable_activity_title">Stundenplan</string>
+    <string name="activity_title">Stundenplan</string>
     <string name="seven_days_of_the_week">7 Tage die Woche</string>
     <string name="field_error">Feld darf nicht leer sein!</string>
     <string name="time_error">Zeitfeld darf nicht leer sein!</string>
@@ -585,22 +585,22 @@
     <string name="time_dialog">Zeit:</string>
 
     <string name="sevendays_setting">7 Tage pro Woche einstellen</string>
-    <string name="timetable_notification_summary_title">Der heutige Unterricht:</string>
-    <string name="timetable_notification_next_week_title">Nächstes Fach</string>
-    <string name="timetable_credit">Entstanden mit Hilfe von ulan17</string>
+    <string name="notification_summary_title">Der heutige Unterricht:</string>
+    <string name="notification_next_week_title">Nächstes Fach</string>
+    <string name="credit">Entstanden mit Hilfe von ulan17</string>
     <string name="time_from">von</string>
     <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
-    <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
-    <string name="integrate_substitution_in_timetable_on">Vertretungen ausblenden</string>
-    <string name="integrate_substitution_in_timetable_off">Vertretungen anzeigen</string>
+    <string name="integrate_substitution_in_desc">Zum Editieren des Stundenplans besser ausschalten</string>
+    <string name="integrate_substitution_in_on">Vertretungen ausblenden</string>
+    <string name="integrate_substitution_in_off">Vertretungen anzeigen</string>
     <string name="open_all_settings">Alle Einstellungen öffnen</string>
 
     <string name="edit">Bearbeiten</string>
     <string name="automatic_update_check">Automatisch auf Updates prüfen</string>
     <string name="url" translatable="false">URL</string>
 
-    <string name="timetable_channel">Stundenplan</string>
-    <string name="timetable_channel_desc">Eine Benachrichtigung mit deinen Fächern</string>
+    <string name="channel">Stundenplan</string>
+    <string name="channel_desc">Eine Benachrichtigung mit deinen Fächern</string>
     <string name="do_not_disturb_permission_desc">Um automatisch in den Nicht-Stören-Modus zu wechseln, benötigt die App die entsprechende Berechtigung. Dies kann auch später noch in den Einstellungen geändert werden.</string>
     <string name="do_not_disturb_setting">Automatisches Stummschalten</string>
     <string name="do_not_disturb_settings_desc">Automatisch während Fächern in den Nicht-Stören-Modus wechseln und ihn danach wieder ausschalten</string>
@@ -614,10 +614,10 @@
     <string name="no_backup_found_in_downloads">Kein Backup in %1$s gefunden</string>
     <string name="Documents">Dokumente</string>
     <string name="Downloads">Downloads</string>
-    <string name="timetable_delete_content">Soll %1$s gelöscht werden?</string>
-    <string name="timetable_delete_week">das Fach %1$s</string>
-    <string name="timetable_delete_note">die Notiz %1$s</string>
-    <string name="timetable_delete_exam">die Prüfung %1$s</string>
+    <string name="delete_content">Soll %1$s gelöscht werden?</string>
+    <string name="delete_week">das Fach %1$s</string>
+    <string name="delete_note">die Notiz %1$s</string>
+    <string name="delete_exam">die Prüfung %1$s</string>
     <string name="remove_all_subjects">Alles löschen</string>
     <string name="remove_all_subjects_content">Sollen alle Daten des Stundenplans unwiederbringliche gelöscht werden?
         \nEs empfiehlt sich vorher ein Backup anzulegen!</string>
