--- a/app/src/main/res/res/values-en/strings.xml
+++ b/app/src/main/res/res/values-en/strings.xml
@@ -466,7 +466,7 @@
 
     <!-- Settings Activity strings -->
     <string name="sevendays_setting">Enable 7 Days of the Week</string>
-    <string name="timetable_activity_title">Timetable</string>
+    <string name="activity_title">Timetable</string>
     <string name="select_start_time">Start</string>
     <string name="select_end_time">End</string>
     <string name="choose_color">Choose color</string>
@@ -474,16 +474,16 @@
     <string name="notes_activity_title">Notes</string>
     <string name="note">Note</string>
     <string name="exams_activity_title">Exams</string>
-    <string name="timetable_notification_summary_title">Today\'s lessons:</string>
-    <string name="timetable_notification_next_week_title">Next lesson</string>
-    <string name="timetable_credit">Credits go to ulan17</string>
+    <string name="notification_summary_title">Today\'s lessons:</string>
+    <string name="notification_next_week_title">Next lesson</string>
+    <string name="credit">Credits go to ulan17</string>
     <string name="time_from">from</string>
     <string name="integrate_substitution_in_timetable" tools:ignore="Typos">Show sit-in in timetable</string>
-    <string name="integrate_substitution_in_timetable_desc">If you want to edit the timetable, please disable this</string>
+    <string name="integrate_substitution_in_desc">If you want to edit the timetable, please disable this</string>
     <string name="edit">Edit</string>
     <string name="automatic_update_check">Automatic update check</string>
-    <string name="timetable_channel">Timetable</string>
-    <string name="timetable_channel_desc">A notification about your lessons</string>
+    <string name="channel">Timetable</string>
+    <string name="channel_desc">A notification about your lessons</string>
     <string name="do_not_disturb_permission_desc">In order to automatically switch to do not disturb mode, the app requires the appropriate authorization</string>
     <string name="do_not_disturb_setting">Automatic Do not disturb</string>
     <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects and then switch it off again</string>
@@ -500,12 +500,12 @@
     <string name="Downloads">Downloads</string>
     <string name="menu_items">Menu items</string>
     <string name="colorPickerDialog_preset">Presets</string>
-    <string name="integrate_substitution_in_timetable_on">Hide sit-in</string>
-    <string name="integrate_substitution_in_timetable_off">Show sit-in</string>
-    <string name="timetable_delete_content">Should %1$s be deleted?</string>
-    <string name="timetable_delete_week">the subject %1$s</string>
-    <string name="timetable_delete_note">the note %1$s</string>
-    <string name="timetable_delete_exam">the exam %1$s</string>
+    <string name="integrate_substitution_in_on">Hide sit-in</string>
+    <string name="integrate_substitution_in_off">Show sit-in</string>
+    <string name="delete_content">Should %1$s be deleted?</string>
+    <string name="delete_week">the subject %1$s</string>
+    <string name="delete_note">the note %1$s</string>
+    <string name="delete_exam">the exam %1$s</string>
     <string name="remove_all_subjects">Delete everything</string>
     <string name="remove_all_subjects_content">Should all data in the timetable be irretrievably deleted?
         \nIt is advisable to create a backup beforehand!</string>
