--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,4 +159,19 @@
 
     <string name="about_libs_title">Open-Source Libraries</string>
 
+    <string name="summary_activity_title">Summary</string>
+    <string name="change_summary_library">Change presentation</string>
+    <string name="start_of_school">School start</string>
+    <string name="length_of_period">Hour length</string>
+    <string name="minutes">minutes</string>
+
+    <string-array name="timetable_header">
+        <item></item>
+        <item>Mon</item>
+        <item>Tue</item>
+        <item>Wed</item>
+        <item>Thu</item>
+        <item>Fri</item>
+    </string-array>
+
 </resources>
