--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -193,4 +193,12 @@
     <string name="change_summary_library">Darstellung ändern</string>
     <string name="summary_activity_title">Zusammenfassung</string>
 
+    <string-array name="timetable_header">
+        <item></item>
+        <item>Mon</item>
+        <item>Die</item>
+        <item>Mit</item>
+        <item>Don</item>
+        <item>Fre</item>
+    </string-array>
 </resources>
